Pipelines-Applications-master/Pipeline-Kubernetes-master/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: appweb1-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: appweb1
  ports:
    - port: 80 # Default port for image
      nodePort: 31000
---
kind: Service
apiVersion: v1
metadata:
  name: appweb2-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: appweb2
  ports:
    - port: 3000 # Default port for image
      nodePort: 31001
---
kind: Service
apiVersion: v1
metadata:
  name: appweb-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: appweb
  ports:
    - port: 80 # Default port for image
      nodePort: 31003
